# tracy

./: CMakeLists.txt  main.cpp  ray.h  vector3.h
cameras/: camera.h
materials/: lambertian.h  material.cpp  material.h  materials.cpp  materials.h
objects/: box.cpp  box.h  circle.cpp  circle.h  object.cpp  object.h  plane.h  sphere.cpp  sphere.h
utilities/: kahan.h
